--- a/Minesweeper/app/src/main/res/layout/activity_mine.xml
+++ b/Minesweeper/app/src/main/res/layout/activity_mine.xml
@@ -1,8 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,6 +9,10 @@
     tools:context=".MineActivity">
 
     <RelativeLayout
+        android:id="@+id/topbar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -64,10 +67,15 @@
         android:numColumns="8"
         android:padding="15dp"
         />-->
+
+
     <ScrollView
+        android:layout_below="@id/topbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:padding="10dp"
         android:scrollbars="vertical">
 
@@ -81,4 +89,13 @@
                 android:layout_height="wrap_content" />
         </HorizontalScrollView>
     </ScrollView>
-</LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:id="@+id/dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+</RelativeLayout>
